[package]
name = "camera-sample"
version = "0.1.0"
authors = ["blck-snwmn <whitesnowmancreator@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.46"
photon-rs = "0.2.0"


[dependencies.web-sys]
version = "0.3.44"
features = [
  'ImageData',
]